tui_rog_game/error
~/workspace/CppPlayground/build main ⇡1 !20 ?3 ❯ make -j                                                                             ✘ INT 13s jwlee@minipc
[  3%] Built target screen
[  3%] Built target common_lib
[ 12%] Built target benchmark
[ 16%] Built target spdlog
[ 16%] Built target gtest
[ 36%] Built target leveldb
[ 38%] Built target benchmark_main
[ 41%] Built target domain_model
[ 43%] Built target gtest_main
[ 63%] Built target dom
[ 63%] Built target leveldbutil
[ 63%] Built target gmock
[ 65%] Built target port_in
[ 67%] Built target leveldb_provider
[ 69%] Built target port_out
[ 74%] Built target domain_event
[ 76%] Built target gmock_main
[ 89%] Built target component
[ 89%] Built target inmemory_adapter
[ 89%] Built target domain_service
[ 90%] Building CXX object adapter/out/description/CMakeFiles/description_adapter.dir/src/LlmAdapter.cc.o
[ 92%] Building CXX object adapter/out/description/CMakeFiles/description_adapter.dir/src/HardcodedDescAdapter.cc.o
[ 94%] Built target leveldb_adapter
[ 94%] Built target adapter_in_tui
[ 94%] Built target LevelDbAdapterBenchmark
[ 94%] Linking CXX static library libdescription_adapter.a
[ 94%] Built target description_adapter
[ 94%] Building CXX object adapter/out/description/test/CMakeFiles/LlmAdapterTest.dir/LlmAdapterTest.cc.o
[ 94%] Building CXX object assembly/CMakeFiles/assembly.dir/src/ApplicationBuilder.cc.o
/home/jwlee/workspace/CppPlayground/tui_rog_game/adapter/out/description/test/LlmAdapterTest.cc: In member function ‘virtual void LlmAdapterTest_GeneratesNonEmptyDescription_Test::TestBody()’:
/home/jwlee/workspace/CppPlayground/tui_rog_game/adapter/out/description/test/LlmAdapterTest.cc:27:59: error: cannot convert ‘TuiRogGame::Domain::Model::Position’ to ‘const TuiRogGame::Port::Out::GameStateDTO&’
   27 |     std::string description = adapter.generateDescription(test_position);
      |                                                           ^~~~~~~~~~~~~
      |                                                           |
      |                                                           TuiRogGame::Domain::Model::Position
In file included from /home/jwlee/workspace/CppPlayground/tui_rog_game/adapter/out/description/test/LlmAdapterTest.cc:2:
/home/jwlee/workspace/CppPlayground/tui_rog_game/adapter/out/description/include/LlmAdapter.h:16:68: note:   initializing argument 1 of ‘virtual std::string TuiRogGame::Adapter::Out::Description::LlmAdapter::generateDescription(const TuiRogGame::Port::Out::GameStateDTO&)’
   16 |     std::string generateDescription(const Port::Out::GameStateDTO& game_state) override;
      |                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
make[2]: *** [adapter/out/description/test/CMakeFiles/LlmAdapterTest.dir/build.make:76: adapter/out/description/test/CMakeFiles/LlmAdapterTest.dir/LlmAdapterTest.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1000: adapter/out/description/test/CMakeFiles/LlmAdapterTest.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
